--- a/css/theme/default.css
+++ b/css/theme/default.css
@@ -36,6 +36,10 @@ body {
   background: #ff5e99;
   text-shadow: none; }
 
+.darktext {
+  color : #000000;
+}
+
 /*********************************************
  * HEADERS
  *********************************************/
